tests/baselines/reference/unusedSingleParameterInFunctionExpression.errors.txt
tests/cases/compiler/unusedSingleParameterInFunctionExpression.ts(2,21): error TS6134: Parameter 'person' has never been used.
tests/cases/compiler/unusedSingleParameterInFunctionExpression.ts(3,9): error TS6133: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedSingleParameterInFunctionExpression.ts (2 errors) ====
    
    var func = function(person: string) {
                        ~~~~~~~~~~~~~~
!!! error TS6134: Parameter 'person' has never been used.
        var unused = 20;
            ~~~~~~
!!! error TS6133: Variable 'unused' has never been used.
    }